<resources>
    <string name="app_name">Assignment 4</string>
    <string name="toolbar_title">Civil Advocacy</string>
    <string name="box2">Data provided by</string>
    <string name="box3">Google Civic Information API</string>
    <string name="box4">&#169;2023, Duncan Beyer</string>
    <string name="box5">Version 1.0</string>
    <string name="denied_location">Must give location permission</string>
    <string name="location_error">cannot determine location</string>
    <string name="alert_hint">Enter a city/state or zip</string>
    <string name="alert_title">Enter Address</string>
    <string name="alert_ok">OK</string>
    <string name="alert_cancel">CANCEL</string>
    <string name="address_label">Address:</string>
    <string name="phone_label">Phone:</string>
    <string name="email_label">Email:</string>
    <string name="website_label">Website:</string>
    <string name="no_loc">No Data For Location</string>
    <string name="no_title">No Network Connection</string>
    <string name="no_body">Data cannot be accessed/loaded without an internet connection.</string>
</resources>